Fix gap between headings in mobile view

--- a/styles.scss
+++ b/styles.scss
@@ -71,7 +71,7 @@ aside {
       background-image: url("./img/batiment.jpg");
 
     .homepage-headers_container {
-      background-color: #ffffffbb;
+      background-color: #ffffffdd;
     }
     }
   }
